Action for opening/viewing a save&restore filter