@@ -30,16 +30,36 @@ import javafx.collections.ObservableList;
 import javafx.concurrent.Task;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
-import javafx.scene.control.*;
+import javafx.scene.control.Alert;
 import javafx.scene.control.Alert.AlertType;
+import javafx.scene.control.Button;
+import javafx.scene.control.ButtonType;
+import javafx.scene.control.CheckBox;
+import javafx.scene.control.ComboBox;
+import javafx.scene.control.ListCell;
+import javafx.scene.control.ListView;
+import javafx.scene.control.Menu;
+import javafx.scene.control.MenuItem;
+import javafx.scene.control.MultipleSelectionModel;
+import javafx.scene.control.ProgressIndicator;
+import javafx.scene.control.SelectionMode;
+import javafx.scene.control.SplitPane;
+import javafx.scene.control.Tab;
+import javafx.scene.control.TabPane;
+import javafx.scene.control.TextInputDialog;
+import javafx.scene.control.Tooltip;
+import javafx.scene.control.TreeItem;
+import javafx.scene.control.TreeView;
 import javafx.scene.image.ImageView;
-import javafx.scene.input.*;
+import javafx.scene.input.Clipboard;
+import javafx.scene.input.ClipboardContent;
+import javafx.scene.input.KeyCode;
+import javafx.scene.input.KeyEvent;
+import javafx.scene.input.TransferMode;
 import javafx.scene.layout.VBox;
 import javafx.stage.FileChooser;
 import javafx.util.Callback;
 import javafx.util.StringConverter;
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
 import org.phoebus.applications.saveandrestore.DirectoryUtilities;
 import org.phoebus.applications.saveandrestore.Messages;
 import org.phoebus.applications.saveandrestore.SaveAndRestoreApplication;
@@ -70,8 +90,19 @@ import java.io.File;
 import java.io.IOException;
 import java.net.URI;
 import java.net.URL;
+import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.text.MessageFormat;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.ResourceBundle;
+import java.util.Stack;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 import java.util.logging.Level;
@@ -84,7 +115,7 @@ import java.util.stream.Collectors;
 public class SaveAndRestoreController extends SaveAndRestoreBaseController
         implements Initializable, NodeChangedListener, NodeAddedListener, FilterChangeListener {
 
-     @FXML
+    @FXML
     protected TreeView<Node> treeView;
 
     @FXML
@@ -138,7 +169,7 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
 
     private final CountDownLatch treeInitializationCountDownLatch = new CountDownLatch(1);
 
-    public SaveAndRestoreController(){
+    public SaveAndRestoreController() {
         System.out.println();
     }
 
@@ -251,45 +282,36 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
     public void loadTreeData() {
 
         JobManager.schedule("Load save-and-restore tree data", monitor -> {
-            try{
-                Node rootNode = saveAndRestoreService.getRootNode();
-                TreeItem<Node> rootItem = createTreeItem(rootNode);
-                List<String> savedTreeViewStructure = getSavedTreeStructure();
-                // Check if there is a save tree structure. Also check that the first node id (=tree root)
-                // has the same unique id as the actual root node retrieved from the remote service. This check
-                // is needed to handle the case when the client connects to a different save-and-restore service.
-                if (savedTreeViewStructure != null && !savedTreeViewStructure.isEmpty() && savedTreeViewStructure.get(0).equals(rootNode.getUniqueId())) {
-                    HashMap<String, List<TreeItem<Node>>> childNodesMap = new HashMap<>();
-                    savedTreeViewStructure.forEach(s -> {
-                        List<Node> childNodes = saveAndRestoreService.getChildNodes(Node.builder().uniqueId(s).build());
-                        if (childNodes != null) { // This may be the case if the tree structure was modified externally
-                            List<TreeItem<Node>> childItems = childNodes.stream().map(n -> createTreeItem(n)).sorted(treeNodeComparator).collect(Collectors.toList());
-                            childNodesMap.put(s, childItems);
-                        }
-                    });
-                    setChildItems(childNodesMap, rootItem);
-                } else {
-                    List<Node> childNodes = saveAndRestoreService.getChildNodes(rootItem.getValue());
-                    List<TreeItem<Node>> childItems = childNodes.stream().map(n -> createTreeItem(n)).sorted(treeNodeComparator).collect(Collectors.toList());
-                    rootItem.getChildren().addAll(childItems);
-                }
+            Node rootNode = saveAndRestoreService.getRootNode();
+            TreeItem<Node> rootItem = createTreeItem(rootNode);
+            List<String> savedTreeViewStructure = getSavedTreeStructure();
+            // Check if there is a save tree structure. Also check that the first node id (=tree root)
+            // has the same unique id as the actual root node retrieved from the remote service. This check
+            // is needed to handle the case when the client connects to a different save-and-restore service.
+            if (savedTreeViewStructure != null && !savedTreeViewStructure.isEmpty() && savedTreeViewStructure.get(0).equals(rootNode.getUniqueId())) {
+                HashMap<String, List<TreeItem<Node>>> childNodesMap = new HashMap<>();
+                savedTreeViewStructure.forEach(s -> {
+                    List<Node> childNodes = saveAndRestoreService.getChildNodes(Node.builder().uniqueId(s).build());
+                    if (childNodes != null) { // This may be the case if the tree structure was modified externally
+                        List<TreeItem<Node>> childItems = childNodes.stream().map(this::createTreeItem).sorted(treeNodeComparator).collect(Collectors.toList());
+                        childNodesMap.put(s, childItems);
+                    }
+                });
+                setChildItems(childNodesMap, rootItem);
+            } else {
+                List<Node> childNodes = saveAndRestoreService.getChildNodes(rootItem.getValue());
+                List<TreeItem<Node>> childItems = childNodes.stream().map(this::createTreeItem).sorted(treeNodeComparator).toList();
+                rootItem.getChildren().addAll(childItems);
+            }
 
+            Platform.runLater(() -> {
                 treeView.setRoot(rootItem);
                 expandNodes(treeView.getRoot());
                 // Event handler for expanding nodes
                 treeView.getRoot().addEventHandler(TreeItem.<Node>branchExpandedEvent(), e -> expandTreeNode(e.getTreeItem()));
-                // Load all filters from service
-                loadFilters();
-                // Get saved filter and apply it if non-null, otherwise select "no filter"
-                String savedFilterName = getSavedFilterName();
-                if (savedFilterName != null) {
-                    Optional<Filter> f = filtersComboBox.getItems().stream().filter(filter -> filter.getName().equals(savedFilterName)).findFirst();
-                    f.ifPresent(filter -> filtersComboBox.getSelectionModel().select(filter));
-                }
-            }
-            finally {
                 treeInitializationCountDownLatch.countDown();
-            }
+            });
+            loadFilters();
         });
     }
 
@@ -330,9 +352,9 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
      */
     protected void expandTreeNode(TreeItem<Node> targetItem) {
         List<Node> childNodes = saveAndRestoreService.getChildNodes(targetItem.getValue());
-        List<String> childNodeIds = childNodes.stream().map(Node::getUniqueId).collect(Collectors.toList());
+        List<String> childNodeIds = childNodes.stream().map(Node::getUniqueId).toList();
         List<String> existingNodeIds =
-                targetItem.getChildren().stream().map(item -> item.getValue().getUniqueId()).collect(Collectors.toList());
+                targetItem.getChildren().stream().map(item -> item.getValue().getUniqueId()).toList();
         List<TreeItem<Node>> itemsToAdd = new ArrayList<>();
         childNodes.forEach(n -> {
             if (!existingNodeIds.contains(n.getUniqueId())) {
@@ -471,12 +493,15 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
 
     /**
      * Requests {@link SearchAndFilterTab} to open/select search and filter view to show the specified filter.
-     * @param filterId Unique, case-sensitive id of a save filter.
      *
+     * @param filterId Unique, case-sensitive id of a save filter.
      */
-    private void openSearchWindowForFilter(String filterId){
-        SearchAndFilterTab searchAndFilterTab = openSearchWindow();
-        searchAndFilterTab.showFilter(filterId);
+    private void openSearchWindowForFilter(String filterId) {
+        Platform.runLater(() -> {
+            SearchAndFilterTab searchAndFilterTab = openSearchWindow();
+            searchAndFilterTab.showFilter(filterId);
+            tabPane.getSelectionModel().select(searchAndFilterTab);
+        });
     }
 
     /**
@@ -496,7 +521,7 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
                 parentTreeItem.getChildren().stream()
                         .filter(item -> item.getValue().getNodeType().equals(NodeType.FOLDER))
                         .map(item -> item.getValue().getName())
-                        .collect(Collectors.toList());
+                        .toList();
 
         TextInputDialog dialog = new TextInputDialog();
         dialog.setTitle(Messages.contextMenuNewFolder);
@@ -754,12 +779,12 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
         }
         nodeSubjectToUpdate.setValue(node);
         // Folder and configuration node changes may include structure changes, so expand to force update.
-        if(nodeSubjectToUpdate.isExpanded() && (nodeSubjectToUpdate.getValue().getNodeType().equals(NodeType.FOLDER) ||
-                    nodeSubjectToUpdate.getValue().getNodeType().equals(NodeType.CONFIGURATION))){
-                if (nodeSubjectToUpdate.getParent() != null) { // null means root folder as it has no parent
-                    nodeSubjectToUpdate.getParent().getChildren().sort(treeNodeComparator);
-                }
-                expandTreeNode(nodeSubjectToUpdate);
+        if (nodeSubjectToUpdate.isExpanded() && (nodeSubjectToUpdate.getValue().getNodeType().equals(NodeType.FOLDER) ||
+                nodeSubjectToUpdate.getValue().getNodeType().equals(NodeType.CONFIGURATION))) {
+            if (nodeSubjectToUpdate.getParent() != null) { // null means root folder as it has no parent
+                nodeSubjectToUpdate.getParent().getChildren().sort(treeNodeComparator);
+            }
+            expandTreeNode(nodeSubjectToUpdate);
         }
     }
 
@@ -802,7 +827,7 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
     public void locateNode(Stack<Node> nodeStack) {
         TreeItem<Node> parentTreeItem = treeView.getRoot();
 
-        while (nodeStack.size() > 0) {
+        while (!nodeStack.isEmpty()) {
             Node currentNode = nodeStack.pop();
             TreeItem<Node> currentTreeItem = recursiveSearch(currentNode.getUniqueId(), parentTreeItem);
             expandTreeNode(currentTreeItem);
@@ -1084,7 +1109,7 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
      * @param nodes          List of {@link Node}s that were moved.
      */
     private void addMovedNodes(TreeItem<Node> parentTreeItem, List<Node> nodes) {
-        parentTreeItem.getChildren().addAll(nodes.stream().map(this::createTreeItem).collect(Collectors.toList()));
+        parentTreeItem.getChildren().addAll(nodes.stream().map(this::createTreeItem).toList());
         parentTreeItem.getChildren().sort(treeNodeComparator);
         TreeItem<Node> nextItemToExpand = parentTreeItem;
         while (nextItemToExpand != null) {
@@ -1133,32 +1158,31 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
             return;
         }
         String query = uri.getQuery();
-        if(query == null || query.isEmpty()){
+        if (query == null || query.isEmpty()) {
             logger.log(Level.WARNING, "Called with empty URI");
             return;
         }
         String[] queries = query.split("&");
         String action = "open-node";
         Optional<String> actionQuery = Arrays.stream(queries).filter(q -> q.startsWith("action=")).findFirst();
-        if(!actionQuery.isPresent()){
+        if (actionQuery.isEmpty()) {
             logger.log(Level.WARNING, "Open resource does not specify action, defaulting to 'open node'");
-        }
-        if(action.isEmpty()){
-            logger.log(Level.WARNING, "Open resource specifies empty action, defaulting to 'open node'");;
+        } else if (actionQuery.get().substring("action=".length()).isEmpty()) {
+            logger.log(Level.WARNING, "Empty action specified, defaulting to 'open node'");
+        } else {
+            action = actionQuery.get().substring("action=".length());
         }
 
-        switch(action){
+        switch (action) {
             case "open-node":
                 openNode(uri.getPath().substring(1));
                 break;
             case "open-filter":
-                openFilter(uri.getPath().substring(1));
+                openSearchWindowForFilter(URLDecoder.decode(uri.getPath().substring(1), StandardCharsets.UTF_8));
                 break;
             default:
                 logger.log(Level.WARNING, "Action '" + action + "' not supported");
         }
-
-
     }
 
     public void findSnapshotReferences() {
@@ -1190,7 +1214,14 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
     private void loadFilters() {
         try {
             List<Filter> filters = saveAndRestoreService.getAllFilters();
-            Platform.runLater(() -> filtersList.setAll(filters));
+            Platform.runLater(() -> {
+                filtersList.setAll(filters);
+                String savedFilterName = getSavedFilterName();
+                if (savedFilterName != null) {
+                    Optional<Filter> f = filtersComboBox.getItems().stream().filter(filter -> filter.getName().equals(savedFilterName)).findFirst();
+                    f.ifPresent(filter -> filtersComboBox.getSelectionModel().select(filter));
+                }
+            });
         } catch (Exception e) {
             LOG.log(Level.SEVERE, "Failed to load filters", e);
         }
@@ -1240,8 +1271,7 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
      */
     public Node[] getConfigAndSnapshotForActiveSnapshotTab() {
         Tab selectedTab = tabPane.getSelectionModel().getSelectedItem();
-        if (selectedTab instanceof SnapshotTab) {
-            SnapshotTab snapshotTab = (SnapshotTab) selectedTab;
+        if (selectedTab instanceof SnapshotTab snapshotTab) {
             return new Node[]{snapshotTab.getConfigNode(), snapshotTab.getSnapshotNode()};
         }
         return null;
@@ -1298,12 +1328,12 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
         if (userIdentity.isNull().get()) {
             return false;
         }
-        List<Node> selectedNodes = browserSelectionModel.getSelectedItems().stream().map(TreeItem::getValue).collect(Collectors.toList());
+        List<Node> selectedNodes = browserSelectionModel.getSelectedItems().stream().map(TreeItem::getValue).toList();
         if (selectedNodes.size() == 1) {
             return true;
         }
         NodeType nodeTypeOfFirst = selectedNodes.get(0).getNodeType();
-        if (selectedNodes.stream().filter(n -> !n.getNodeType().equals(nodeTypeOfFirst)).findFirst().isPresent()) {
+        if (selectedNodes.stream().anyMatch(n -> !n.getNodeType().equals(nodeTypeOfFirst))) {
             return false;
         }
         TreeItem<Node> parentOfFirst = browserSelectionModel.getSelectedItems().get(0).getParent();
@@ -1336,10 +1366,7 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
         if ((nodeTypeOfFirst.equals(NodeType.COMPOSITE_SNAPSHOT) ||
                 nodeTypeOfFirst.equals(NodeType.CONFIGURATION)) && !nodeTypeOfTarget.equals(NodeType.FOLDER)) {
             return false;
-        } else if (nodeTypeOfFirst.equals(NodeType.SNAPSHOT) && !nodeTypeOfTarget.equals(NodeType.CONFIGURATION)) {
-            return false;
-        }
-        return true;
+        } else return !nodeTypeOfFirst.equals(NodeType.SNAPSHOT) || nodeTypeOfTarget.equals(NodeType.CONFIGURATION);
     }
 
     public void pasteFromClipboard() {
@@ -1432,40 +1459,41 @@ public class SaveAndRestoreController extends SaveAndRestoreBaseController
     @Override
     public void secureStoreChanged(List<ScopedAuthenticationToken> validTokens) {
         super.secureStoreChanged(validTokens);
-        tabPane.getTabs().forEach(t -> {
-            ((SaveAndRestoreTab) t).secureStoreChanged(validTokens);
+        tabPane.getTabs().forEach(t -> ((SaveAndRestoreTab) t).secureStoreChanged(validTokens));
+    }
+
+    private void openNode(String nodeId) {
+        JobManager.schedule("Open save-and-restore node", monitor -> {
+            try {
+                if (!treeInitializationCountDownLatch.await(30000, TimeUnit.SECONDS)) {
+                    return;
+                }
+            } catch (InterruptedException e) {
+                logger.log(Level.WARNING, "Failed to await tree view to load", e);
+                return;
+            }
+            Node node = saveAndRestoreService.getNode(nodeId);
+            if (node == null) {
+                // Show error dialog.
+                Alert alert = new Alert(AlertType.ERROR);
+                alert.setTitle(Messages.openResourceFailedTitle);
+                alert.setHeaderText(MessageFormat.format(Messages.openResourceFailedHeader, nodeId));
+                Platform.runLater(() -> {
+                    DialogHelper.positionDialog(alert, treeView, -200, -200);
+                    alert.show();
+                });
+                return;
+            }
+            if (node.getNodeType().equals(NodeType.FOLDER)) {
+                logger.log(Level.WARNING, "Requested to open node, but node must not be folder node");
+                return;
+            }
+            Stack<Node> copiedStack = new Stack<>();
+            DirectoryUtilities.CreateLocationStringAndNodeStack(node, false).getValue().forEach(copiedStack::push);
+            Platform.runLater(() -> {
+                locateNode(copiedStack);
+                nodeDoubleClicked(node);
+            });
         });
-    }
-
-    private void openNode(String nodeId){
-        try {
-            // Wait at most 30 seconds for tree data to become available.
-            treeInitializationCountDownLatch.await(30000, TimeUnit.SECONDS);
-        } catch (InterruptedException e) {
-            logger.log(Level.WARNING, "Failed to await tree view to load", e);
-            return;
-        }
-        Node node = saveAndRestoreService.getNode(nodeId);
-        if (node == null) {
-            // Show error dialog.
-            Alert alert = new Alert(AlertType.ERROR);
-            alert.setTitle(Messages.openResourceFailedTitle);
-            alert.setHeaderText(MessageFormat.format(Messages.openResourceFailedHeader, nodeId));
-            DialogHelper.positionDialog(alert, treeView, -200, -200);
-            alert.show();
-            return;
-        }
-        if(node.getNodeType().equals(NodeType.FOLDER)){
-            logger.log(Level.WARNING, "Requested to open node, but node must not be folder node");
-            return;
-        }
-        Stack<Node> copiedStack = new Stack<>();
-        DirectoryUtilities.CreateLocationStringAndNodeStack(node, false).getValue().forEach(copiedStack::push);
-        locateNode(copiedStack);
-        nodeDoubleClicked(node);
-    }
-
-    private void openFilter(String filterId){
-
     }
 }
